change HTML and CSS codes for web

--- a/index.html
+++ b/index.html
@@ -13,63 +13,73 @@
        <h1>Yuxiang (Sean) Ye</h1> 
         <nav>
             <li>
-            <a href="#About_Me">About Me </a>
+            <a href="#About Me">About Me </a>
             </li>
             <li> 
-            <a href="#Work">Work </a>
+            <a href="#Works">Work </a>
             </li>
             <li> 
-            <a href="#Contact_Me">Contact Me </a>
+            <a href="#Contact">Contact Me </a>
             </li>
-        <!-- add resume link here -->
             <h2><button onclick="location.href='./assets/WordDoc/YuxiangYe-Resume.docx';"> Download Resume File </button></h2>
         </nav>
     </header>
     <maim>
-        <!-- <section class="AutomationEngineer">
-            <img src="./assets/Images/AutomationEngineer.JPG"; alt="Automation engineer programming tools and hardware with a Iron Man who is looking at data from his suit on the right side of image"> -->     
+        <aside id = "About Me"> About Me </aside>
         <section id="About_Me">
-            <article>About Me </article>
             <img src="./assets/Images/Sean_Ye.JPG"; alt="A picture of Sean Ye is displayed on the About Me section" >
             <p>My name is Sean Ye. I have five years of experience as an Electrical/Control Project Engineer, specializing in process improvement and automation projects in an industrial manufacturing environment. Seeking a challenging position with a company to utilize my experience and knowledge, with opportunities for career growth and advancement. Strengths include Project Management, Electrical Power Systems design, Control Systems design and analysis, and various programming skills. Currently working on my PMP Certification. Bilingual in Chinese and English.</p>
         </section>
-       
+        <aside id="Works">Work </aside>
         <section id="Work">
-            <aside>Work </aside>
-                <article class= "Snippet">
-                <!-- <p> Snippet Cheatsheet </p> -->
-                <img src="./assets/Images/Snippet Cheatsheet.JPG"; alt="Digital Marketing Meeting is display, a group of people are in a Meeting" >
-                <!-- <p> CSS/HTML</p> -->
-                 <article class= "Horiseon">
-                    <!-- <p> Horiseon Services Home Page </p> -->
-                    <img src="./assets/Images/HoriseonWeb_Screenshot.png"; alt="Digital Marketing Meeting is display, a group of people are in a Meeting" >
-                    <!-- <p> CSS/HTML</p> -->
+                <article class= "Work_Images">                 
+                    <a href="https://github.com/Seanye333/Challenge1-HoriseonWeb.git" target="_blank">
+                        <h1 class="images_title"> Horiseon Services Web </h1>
+                        <img class = "large" src="./assets/Images/HoriseonWeb_Screenshot.png"; alt="an overview of horiseon Services website layout is displayed">
+                        <h2 class ="code_types"> CSS/HTML</h2>
+                    </a>
                 </article>
-                <article class= "Horiseon">
-                    <!-- <p> Horiseon Services Home Page </p> -->
-                    <img src="./assets/Images/HoriseonWeb_Screenshot.png"; alt="Digital Marketing Meeting is display, a group of people are in a Meeting" >
-                    <!-- <p> CSS/HTML</p> -->
+                <article class= "Work_Images">
+                    <a href="https://github.com/Seanye333/Prework-study-guide.git" target="_blank">
+                        <h1 class="images_title2"> Bowtie Cat </h1>
+                        <img class = "Mid"src="./assets/Images/Bowtie-Cat.JPG"; alt=" an overview of bowtie cat webpage with 4 boxes including two sentenses of description for HTML, CSS, Git, and Javescript" >
+                        <h2 class ="code_types2"> CSS/HTML</h2>
+                    </a>
                 </article>
-                <article class= "Horiseon">
-                    <!-- <p> Horiseon Services Home Page </p> -->
-                    <img src="./assets/Images/HoriseonWeb_Screenshot.png"; alt="Digital Marketing Meeting is display, a group of people are in a Meeting" >
-                    <!-- <p> CSS/HTML</p> -->
+                <article class= "Work_Images">
+                    <a href="https://github.com/Seanye333/Snippet_Cheatsheet.git" target="_blank">
+                        <h1 class="images_title2"> Snippet Cheatsheet</h1>
+                        <img class = "Mid"src="./assets/Images/Snippet Cheatsheet.JPG"; alt="An overview of snippet cheatsheet with purple boxes and description on each box" >
+                        <h2 class ="code_types2"> CSS/HTML</h2>
+                    </a>
                 </article>
-                <article class= "Horiseon">
-                    <!-- <p> Horiseon Services Home Page </p> -->
-                    <img src="./assets/Images/HoriseonWeb_Screenshot.png"; alt="Digital Marketing Meeting is display, a group of people are in a Meeting" >
-                    <!-- <p> CSS/HTML</p> -->
+                <article class= "Work_Images">
+                    <a href= "https://github.com/Seanye333/Simple_Camera_Product_Page.git" target="_blank">
+                        <h1 class="images_title2"> Camera Product </h1>
+                        <img class = "Mid" src="./assets/Images/Camera_Product_Page.JPG"; alt=" A camera page with camera proudct in the middle and description of product and price to its left">
+                        <h2 class ="code_types2"> CSS/HTML</h2>
+                    </a>
                 </article>
-        </section>
-        
-<footer id="Contact_Me">
-    <h1> Contact Me </h1> 
-    <a href = "tel:+347-993-7692 "> Phone: 347-993-7692 </a> 
-    <a href ="mailto: seanye86@gmail.com"> Send E-mail </a>
-    <a href = "https://github.com/Seanye333"> GitHub </a>
-    <a href ="https://www.linkedin.com/in/yuxiang-ye/"> Linkedin </a>
-    <a href="https://www.instagram.com/arrrsean/?igshid=MmIzYWVlNDQ5Yg%3D%3D"> Instagram </a>  
-</footer> 
+                <article class= "Work_Images"> 
+                    <a href= "https://github.com/Seanye333/CSS_Blog_Web.git" target="_blank">
+                        <h1 class="images_title2"> CSS Blog Web </h1>
+                        <img class = "Mid"src="./assets/Images/CSS_Blog_Web.JPG"; alt="An overview of CSS blog webpage talking about building reponsive layout " >
+                        <h2 class ="code_types2"> CSS/HTML</h2>
+                    </a>
+                </article>
+        </section>  
+        <aside id="Contact">Contact</aside>      
+        <section id="Contact_Me">
+            <a href = "tel:+347-993-7692 "> ☎️ Phone </a> 
+            <a href ="mailto: seanye86@gmail.com"> 📧 E-mail </a>
+            <a href = "https://github.com/Seanye333"> 📀 GitHub </a>
+            <a href ="https://www.linkedin.com/in/yuxiang-ye/"> 📋 Linkedin </a>
+            <a href="https://www.instagram.com/arrrsean/?igshid=MmIzYWVlNDQ5Yg%3D%3D"> 📷 Instagram </a>  
+        </section> 
     </maim> 
+    <footer>
+        <p> 👉 Thank you for visiting my resume web page! Please feel free to reach out to me! 👈 </p>
+    <!-- <img src="./assets/Images/AutomationEngineer.JPG"; alt="Automation engineer programming tools and hardware with a Iron Man who is looking at data from his suit on the right side of image">      -->
+    </footer> 
 </body>
 </html>
