--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <header>
        <h1>Yuxiang (Sean) Ye</h1> 
         <nav>
-            <li>
+            <h2>
             <a href="#About Me">About Me </a>
-            </li>
-            <li> 
+            </h2>
+            <h2> 
             <a href="#Works">Work </a>
-            </li>
-            <li> 
+            </h2>
+            <h2> 
             <a href="#Contact">Contact Me </a>
-            </li>
-            <h2><button onclick="location.href='./assets/WordDoc/YuxiangYe-Resume.docx';"> Download Resume File </button></h2>
+            </h2>
+            <h3><button onclick="location.href='./assets/WordDoc/YuxiangYe-Resume.docx';"> Download Resume File </button></h2>
         </nav>
     </header>
-    <maim>
+    <main>
         <aside id = "About Me"> About Me </aside>
         <section id="About_Me">
             <img src="./assets/Images/Sean_Ye.JPG"; alt="A picture of Sean Ye is displayed on the About Me section" >
@@ -34,7 +34,7 @@
         <section id="Work">
                 <article class= "Work_Images">                 
                     <a href="https://github.com/Seanye333/Challenge1-HoriseonWeb.git" target="_blank">
-                        <h1 class="images_title"> Horiseon Services Web </h1>
+                        <h1 class="images_title"> Horiseon Services </h1>
                         <img class = "large" src="./assets/Images/HoriseonWeb_Screenshot.png"; alt="an overview of horiseon Services website layout is displayed">
                         <h2 class ="code_types"> CSS/HTML</h2>
                     </a>
@@ -76,10 +76,9 @@
             <a href ="https://www.linkedin.com/in/yuxiang-ye/"> 📋 Linkedin </a>
             <a href="https://www.instagram.com/arrrsean/?igshid=MmIzYWVlNDQ5Yg%3D%3D"> 📷 Instagram </a>  
         </section> 
-    </maim> 
+    </main> 
     <footer>
         <p> 👉 Thank you for visiting my resume web page! Please feel free to reach out to me! 👈 </p>
-    <!-- <img src="./assets/Images/AutomationEngineer.JPG"; alt="Automation engineer programming tools and hardware with a Iron Man who is looking at data from his suit on the right side of image">      -->
     </footer> 
 </body>
 </html>
