changed phone number

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <aside id="Contact">Contact</aside>      
         <section id="Contact_Me">
             <!-- use a href to allow user click on each tab to corresponse to each item below -->
-            <a href = "tel:+347-993-7692 "> ☎️ Phone </a> 
+            <a href = "tel:+1-347-993-7692 "> ☎️ Phone </a> 
             <a href ="mailto: seanye86@gmail.com"> 📧 E-mail </a>
             <a href = "https://github.com/Seanye333"> 📀 GitHub </a>
             <a href ="https://www.linkedin.com/in/yuxiang-ye/"> 📋 Linkedin </a>
